Fixing the date picker is not showing on single task popup.
The date picker is not showing on a single task popup.
Just click on the PM Frontend button navigate to a task list of a project now click on a task and try to change the date you will see the date picker is not showing.

--- a/views/assets/css/daterangepicker/daterangepicker.css
+++ b/views/assets/css/daterangepicker/daterangepicker.css
@@ -10,7 +10,7 @@
   margin-top: 7px;
   top: 100px;
   left: 20px;
-  z-index: 3001;
+  z-index: 9999;
   display: none;
   font-family: arial;
   font-size: 15px;
